# easy_streamlit_aggrid

./: .gitignore  ChatGPT_st_aggrid.html  README.md  project.toml  pyproject.toml  requirements.txt  test3.py  test_app.py  test_filters.py
easy_st_aggrid/: __init__.py  _columns_config.py  _version.py  col_bar.py  col_icon.py  col_status.py  columns_config.py  defaults.py  icons.py  table.py
src/easy_st_aggrid/: _version.py
