[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_st_aggrid"
version = "2025.10.22"
description = "Toolkit for creating 'columnDefs' in a more pythonistic way for the 'streamlit-aggrid' component"
readme = "README.md"
authors = [
  { name="Pablo GP", email="pablogonzalezpila@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
  "streamlit-aggrid",
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/PaulFilms/easy_streamlit_aggrid"
Repository = "https://github.com/PaulFilms/easy_streamlit_aggrid/issues"
