[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_st_aggrid"
version = "2025.10.22"
description = "Toolkit for creating 'columnDefs' in a more pythonistic way for the 'streamlit-aggrid' component"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Pablo GP", email="pablogonzalezpila@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "streamlit-aggrid",
]

[tool.setuptools]
packages = ["easy_st_aggrid"]
include-package-data = true

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["easy_st_aggrid*"]

[project.urls]
"Homepage" = "https://github.com/PaulFilms/easy_streamlit_aggrid"
"Bug Tracker" = "https://github.com/PaulFilms/easy_streamlit_aggrid/issues"
