[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_st_aggrid"
dynamic = ["version"]
description = "Toolkit for creating 'columnDefs' in a more pythonistic way for the 'streamlit-aggrid' component"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Pablo GP", email="pablogonzalezpila@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "streamlit-aggrid",
  "streamlit"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["easy_st_aggrid*"]

[tool.setuptools.dynamic]
version = { attr = "easy_st_aggrid.__version__" }

[project.urls]
"Homepage" = "https://github.com/PaulFilms/easy_streamlit_aggrid"
"Bug Tracker" = "https://github.com/PaulFilms/easy_streamlit_aggrid/issues"
